<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_first"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.learning.sample.robotiumtest.espresso.FirstActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <EditText
            android:id="@+id/inputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/changeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New button"
            android:onClick="onClick"
            />
        <Button
            android:id="@+id/switchActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Change text"
            android:onClick="onClick"
            />
    </LinearLayout>

</RelativeLayout>
